--- a/Image Classification CIFAR10/image_classification_cifar10.ipynb
+++ b/Image Classification CIFAR10/image_classification_cifar10.ipynb
@@ -401,7 +401,7 @@
     "}\n",
     "from PIL import Image\n",
     "import numpy as np\n",
-    "im=Image.open(r\"C:\\Users\\HP\\Desktop\\Deep Learning\\Deep Learning\\image_classification_cifar10\\single_prediction\\14.jpg\")\n",
+    "im=Image.open(r\"C:\\Users\\HP\\Desktop\\Deep Learning\\Deep Learning\\Image Classification CIFAR10\\Single Prediction\\14.jpg\")\n",
     "# the input image is required to be in the shape of dataset, i.e (32,32,3)\n",
     " \n",
     "im=im.resize((32,32))\n",
